app/static/main.css
.main-panel {
    width: 100%;
    height: 100%;
    flex: 1;
}

.main-panel .header {
    position: fixed;
    background-color: white;
    width: 60%;
    height: 50px;
    box-shadow: 0 0px 23px -8px rgb(211, 211, 211);
    z-index: 300;
}

.main-panel .header .header-left {
    position: relative;
    width: 60%;
    height: 100%;
    float: left;
}

.main-panel .header .header-right {
    position: relative;
    width: 40%;
    height: 100%;
    float: left;
}

.main-panel .header .header-right {
    list-style: none;
    padding: 30px;
    padding-top: 0px;
    padding-bottom: 0px;

}

.main-panel .header .header-right .row .col-md-4 {
    display: flex;
  justify-content: center;
  align-items: center;
}

.main-panel .header .header-right a {
    font-size: 20px;
    width: 100%;
    height:50px;
    padding-top: 12px;
    font-weight: 500;
    text-align: center;
    color: #5D6F81;
}

.main-panel .header .header-right a.active {
    font-weight: 600;
    color: #2976E8;
    border-bottom: 4px solid #2976E8;
}



.scanning:after {
    content: '';
    /* make the element cover the whole thing */
    display: block;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    /* and sit in front */
    z-index: 1;
    /* gradient with a radar like fade */
    background:
      linear-gradient(90deg,
        rgba(0,0,0,0),
        rgba(0,0,0,0) 55%,
        #f1b5002d 56%,
        rgba(0,0,0,0) 57%,
        rgba(0,0,0,0)
      );
    /* make it big enough so when we slide it around still covers whole image */
    background-size:     300% 100%;
    background-repeat:   no-repeat;
    /* start with the scan bar just off the left side */
    background-position: 84% center;
    -webkit-animation:   scan 5s infinite ease;
  }
  
  @-webkit-keyframes scan {
    /* finish with the scan bar just off the right side */
    100% { background-position: 25% center; }
  }


.spin {
    -webkit-animation-name: spin;
    -webkit-animation-duration: 4000ms;
    -webkit-animation-iteration-count: infinite;
    -webkit-animation-timing-function: linear;
    -moz-animation-name: spin;
    -moz-animation-duration: 4000ms;
    -moz-animation-iteration-count: infinite;
    -moz-animation-timing-function: linear;
    -ms-animation-name: spin;
    -ms-animation-duration: 4000ms;
    -ms-animation-iteration-count: infinite;
    -ms-animation-timing-function: linear;
    
    animation-name: spin;
    animation-duration: 4000ms;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
}

@-moz-keyframes spin {
    from { -moz-transform: rotate(0deg); }
    to { -moz-transform: rotate(360deg); }
}
@-webkit-keyframes spin {
    from { -webkit-transform: rotate(0deg); }
    to { -webkit-transform: rotate(360deg); }
}
@keyframes spin {
    from {transform:rotate(0deg);}
    to {transform:rotate(360deg);}
}

  .styled-table {
    margin: 25px 0;
    font-size: 1.2em;
    min-width: 400px;
    border-collapse: collapse;
    overflow: hidden;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
}

.styled-table thead tr {
    background-color: #009879;
    color: #ffffff;
    text-align: left;
}

.styled-table th,
.styled-table td {
    padding: 12px 15px;
}

.styled-table tbody tr {
    border-bottom: 1px solid #dddddd;
}

.styled-table tbody tr:nth-of-type(even) {
    background-color: #f7f7f7;
}

.styled-table tbody tr:last-of-type {
    border-bottom: 0px solid #009879;
}

.styled-table tbody tr.active-row {
    font-weight: bold;
    color: #009879;
}

.custom-select {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    height: 40px;
    padding: 10px 15px 10px 16px;
    font-size: 15px;
    font-weight: 600;
    text-align: right;
    background: #fff url("/static/images/select-arrows.svg") no-repeat right 0px center;
    background-size: 10px;
    border: none;
    direction: rtl;
    align-items: right;
}
.custom-select:hover {
    border: none;
    color:rgba(57, 22, 163, 1);
    cursor: pointer;
}
.custom-select:focus {
    border: none;
    outline: none;
    cursor: pointer;
    color:rgba(57, 22, 163, 1);
}
/* remove default arrow in IE */
select::-ms-expand {
    display:none;
}

